# fanuc

fanuc_arcmate120id12_support/: CHANGELOG.rst  CMakeLists.txt  package.xml  readme.md
fanuc_arcmate120id12_support/launch/: load_arcmate120id12.launch  robot_interface_streaming_arcmate120id12.launch  robot_state_visualize_arcmate120id12.launch  test_arcmate120id12.launch
fanuc_arcmate120id12_support/meshes/arcmate120id12/collision/: link_3.stl
fanuc_arcmate120id12_support/meshes/arcmate120id12/visual/: link_4.stl
fanuc_arcmate120id12_support/tests/: roslaunch_test.xml
fanuc_arcmate120id12_support/urdf/: arcmate120id12.xacro  arcmate120id12_macro.xacro
fanuc_arcmate120id_support/: CHANGELOG.rst  CMakeLists.txt  package.xml  readme.md
fanuc_arcmate120id_support/config/: opw_parameters_arcmate120id.yaml  opw_parameters_arcmate120id12l.yaml
fanuc_arcmate120id_support/launch/: load_arcmate120id.launch  load_arcmate120id12l.launch  robot_interface_streaming_arcmate120id.launch  robot_interface_streaming_arcmate120id12l.launch  robot_state_visualize_arcmate120id.launch  robot_state_visualize_arcmate120id12l.launch  test_arcmate120id.launch  test_arcmate120id12l.launch
fanuc_arcmate120id_support/meshes/arcmate120id/visual/: link_5.stl
fanuc_arcmate120id_support/meshes/arcmate120id12l/collision/: base_link.stl
fanuc_arcmate120id_support/meshes/arcmate120id12l/visual/: link_1.stl
fanuc_arcmate120id_support/tests/: roslaunch_test.xml
fanuc_arcmate120id_support/urdf/: arcmate120id.xacro  arcmate120id12l.xacro  arcmate120id12l_macro.xacro  arcmate120id_macro.xacro
fanuc_m20id_support/: CHANGELOG.rst  CMakeLists.txt  package.xml  readme.md
fanuc_m20id_support/config/: opw_parameters_m20id.yaml  opw_parameters_m20id12l.yaml
fanuc_m20id_support/launch/: load_m20id.launch  load_m20id12l.launch  robot_interface_streaming_m20id.launch  robot_interface_streaming_m20id12l.launch  robot_state_visualize_m20id.launch  robot_state_visualize_m20id12l.launch  test_m20id.launch  test_m20id12l.launch
fanuc_m20id_support/meshes/m20id/collision/: link_1.stl  link_2.stl  link_4.stl  link_4_1.stl  link_6.stl
fanuc_m20id_support/meshes/m20id/visual/: link_2.stl  link_3.stl  link_4_3.stl  link_4_4.stl  link_5.stl
fanuc_m20id_support/tests/: roslaunch_test.xml
fanuc_m20id_support/urdf/: m20id.xacro  m20id12l.xacro  m20id12l_macro.xacro  m20id_macro.xacro
(+10 files in other folders)
