<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>fanuc_arcmate120id12_support</name>
  <version>0.5.0</version>
  <description>
    <p>
      ROS-Industrial support for the Fanuc Arc Mate 120iD (and variants).
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for Fanuc Arc Mate 120iD manipulators.
    </p>
    <p>
      Joint limits and maximum joint velocities are based on the information in
      the <em>Fanuc Arc Mate 120iD datasheet</em>, dated <em>1-Mar-2021</em>.
      All urdfs are based on the default motion and joint velocity limits,
      unless noted otherwise (ie: no support for high speed joints,
      extended / limited motion ranges or other options).
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>
  <author>Stevie Dale (Southwest Research Institute)</author>
  <maintainer email="steven.dale@swri.org">Stevie Dale (Southwest Research Institute)</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/fanuc_arcmate120id12_support</url>
  <url type="bugtracker">https://github.com/ros-industrial/fanuc/issues</url>
  <url type="repository">https://github.com/ros-industrial/fanuc</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>

  <exec_depend>fanuc_driver</exec_depend>
  <exec_depend>fanuc_resources</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent />
    <rosindex>
      <tags>
        <tag>support_package</tag>
        <tag>description</tag>
        <tag>fanuc</tag>
        <tag>industrial</tag>
        <tag>ros-industrial</tag>
        <tag>arcmate120id12</tag>
      </tags>
    </rosindex>
    <ros_industrial>
      <support_level value="community" />
    </ros_industrial>
  </export>
</package>
